--- a/mavenDemo-parent/pom.xml
+++ b/mavenDemo-parent/pom.xml
@@ -15,7 +15,10 @@
     </modules>
 
     <scm>
-        <connection>scm:git:https://github.com/panmingzhi815/mavenDemo.git</connection>
+        <url>https://github.com/panmingzhi815/mavenDemo</url>
+        <connection>scm:git:git://github.com/panmingzhi815/mavenDemo.git</connection>
+        <developerConnection>scm:git:git://github.com/panmingzhi815/mavenDemo.git</developerConnection>
+        <tag>mavenDemo</tag>
     </scm>
 
     <dependencies>
@@ -32,7 +35,25 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-release-plugin</artifactId>
-                <version>2.0-beta-7</version>
+                <version>2.0-beta-9</version>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.apache.maven.scm</groupId>
+                        <artifactId>maven-scm-provider-gitexe</artifactId>
+                        <version>1.8.1</version>
+                    </dependency>
+                </dependencies>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-scm-plugin</artifactId>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.apache.maven.scm</groupId>
+                        <artifactId>maven-scm-provider-gitexe</artifactId>
+                        <version>1.8.1</version>
+                    </dependency>
+                </dependencies>
             </plugin>
         </plugins>
     </build>
